infrastructure/istio/bill-0/patch-gateway-pauwelslabs-com.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwelslabs-com
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "pauwelslabs.com"
    - "dev.pauwelslabs.com"
    - "staging.pauwelslabs.com"
    - "github-webhook.cd.${environment}.pauwelslabs.com"
    - "redact.ws"
    - "dev.redact.ws"
    - "staging.redact.ws"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-dev-pauwelslabs-com
      protocol: HTTPS
    hosts:
    - "dev.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-dev-pauwels-labs
  - port:
      number: 443
      name: https-staging-pauwelslabs-com
      protocol: HTTPS
    hosts:
    - "staging.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-staging-pauwels-labs
  - port:
      number: 443
      name: https-prod-pauwelslabs-com
      protocol: HTTPS
    hosts:
    - "t-pauwels-labs-main/pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-prod-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook-cd-${environment}
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.${environment}.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-${environment}-pauwels-labs
  - port:
      number: 443
      name: https-dev-redact-ws
      protocol: HTTPS
    hosts:
    - "dev.redact.ws"
    tls:
      mode: SIMPLE
      credentialName: tls-dev-redact-ws
  - port:
      number: 443
      name: https-staging-redact-ws
      protocol: HTTPS
    hosts:
    - "staging.redact.ws"
    tls:
      mode: SIMPLE
      credentialName: tls-staging-redact-ws
  - port:
      number: 443
      name: https-prod-redact-ws
      protocol: HTTPS
    hosts:
    - "t-pauwels-labs-main/redact.ws"
    tls:
      mode: SIMPLE
      credentialName: tls-prod-redact-ws
