infrastructure/istio/bill-0/patch-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pauwels-labs
  namespace: "${infranamespaceprefix}istio-ingress"
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dev.pauwelslabs.com"
    - "github-webhook.cd.${environment}.pauwelslabs.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-dev
      protocol: HTTPS
    hosts:
    - "dev.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-dev-pauwels-labs
  - port:
      number: 443
      name: https-github-webhook-cd-${environment}
      protocol: HTTPS
    hosts:
    - "flux-system/github-webhook.cd.${environment}.pauwelslabs.com"
    tls:
      mode: SIMPLE
      credentialName: tls-github-webhook-cd-${environment}-pauwels-labs
