infrastructure/istio/bill-0/envoyfilter-optional-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: optional-mtls
  namespace: "i-istio-ingress"
  #namespace: "${infranamespaceprefix}istio-ingress"
spec:
  workloadSelector:
    labels:
      istio: gateway
  configPatches:
  # - applyTo: FILTER_CHAIN
  #   match:
  #     context: GATEWAY
  #     listener:
  #       filterChain:
  #         filter:
  #           name: "envoy.transport_sockets.tls"
  #         sni: "${basednszonename}"
  #   patch:
  #     operation: MERGE
  #     value:
  #       transport_socket:
  #         name: envoy.transport_sockets.tls
  #         typed_config:
  #           "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
  #           common_tls_context:
  #             tls_params:
  #               signature_algorithms:
  #               - "ed25519"
  #               - "ecdsa_secp256r1_sha256"
  #               - "rsa_pss_rsae_sha256"
  #               - "rsa_pkcs1_sha256"
  #               - "ecdsa_secp384r1_sha384"
  #               - "rsa_pss_rsae_sha384"
  #               - "rsa_pkcs1_sha384"
  #               - "rsa_pss_rsae_sha512"
  #               - "rsa_pkcs1_sha512"
  #               - "rsa_pkcs1_sha1"
  #             validation_context:
  #               trust_chain_verification: ACCEPT_UNTRUSTED
  # - applyTo: FILTER_CHAIN
  #   match:
  #     context: GATEWAY
  #     listener:
  #       filterChain:
  #         filter:
  #           name: "envoy.transport_sockets.tls"
  #         sni: "staging.pauwelslabs.com"
  #   patch:
  #     operation: MERGE
  #     value:
  #       transport_socket:
  #         name: envoy.transport_sockets.tls
  #         typed_config:
  #           "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
  #           common_tls_context:
  #             tls_params:
  #               signature_algorithms:
  #               - "ed25519"
  #               - "ecdsa_secp256r1_sha256"
  #               - "rsa_pss_rsae_sha256"
  #               - "rsa_pkcs1_sha256"
  #               - "ecdsa_secp384r1_sha384"
  #               - "rsa_pss_rsae_sha384"
  #               - "rsa_pkcs1_sha384"
  #               - "rsa_pss_rsae_sha512"
  #               - "rsa_pkcs1_sha512"
  #               - "rsa_pkcs1_sha1"
  #             validation_context:
  #               trust_chain_verification: ACCEPT_UNTRUSTED
  # - applyTo: FILTER_CHAIN
  #   match:
  #     context: GATEWAY
  #     listener:
  #       filterChain:
  #         filter:
  #           name: "envoy.transport_sockets.tls"
  #         sni: "pauwelslabs.com"
  #   patch:
  #     operation: MERGE
  #     value:
  #       transport_socket:
  #         name: envoy.transport_sockets.tls
  #         typed_config:
  #           "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
  #           common_tls_context:
  #             tls_params:
  #               signature_algorithms:
  #               - "ed25519"
  #               - "ecdsa_secp256r1_sha256"
  #               - "rsa_pss_rsae_sha256"
  #               - "rsa_pkcs1_sha256"
  #               - "ecdsa_secp384r1_sha384"
  #               - "rsa_pss_rsae_sha384"
  #               - "rsa_pkcs1_sha384"
  #               - "rsa_pss_rsae_sha512"
  #               - "rsa_pkcs1_sha512"
  #               - "rsa_pkcs1_sha1"
  #             validation_context:
  #               trust_chain_verification: ACCEPT_UNTRUSTED
  - applyTo: FILTER_CHAIN
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.transport_sockets.tls"
          sni: "dev.redact.ws"
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
            common_tls_context:
              tls_params:
                signature_algorithms:
                - "ed25519"
                - "ecdsa_secp256r1_sha256"
                - "rsa_pss_rsae_sha256"
                - "rsa_pkcs1_sha256"
                - "ecdsa_secp384r1_sha384"
                - "rsa_pss_rsae_sha384"
                - "rsa_pkcs1_sha384"
                - "rsa_pss_rsae_sha512"
                - "rsa_pkcs1_sha512"
                - "rsa_pkcs1_sha1"
              validation_context:
                trust_chain_verification: ACCEPT_UNTRUSTED
  - applyTo: FILTER_CHAIN
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.transport_sockets.tls"
          sni: "staging.redact.ws"
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
            common_tls_context:
              tls_params:
                signature_algorithms:
                - "ed25519"
                - "ecdsa_secp256r1_sha256"
                - "rsa_pss_rsae_sha256"
                - "rsa_pkcs1_sha256"
                - "ecdsa_secp384r1_sha384"
                - "rsa_pss_rsae_sha384"
                - "rsa_pkcs1_sha384"
                - "rsa_pss_rsae_sha512"
                - "rsa_pkcs1_sha512"
                - "rsa_pkcs1_sha1"
              validation_context:
                trust_chain_verification: ACCEPT_UNTRUSTED
  - applyTo: FILTER_CHAIN
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.transport_sockets.tls"
          sni: "redact.ws"
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext"
            common_tls_context:
              tls_params:
                signature_algorithms:
                - "ed25519"
                - "ecdsa_secp256r1_sha256"
                - "rsa_pss_rsae_sha256"
                - "rsa_pkcs1_sha256"
                - "ecdsa_secp384r1_sha384"
                - "rsa_pss_rsae_sha384"
                - "rsa_pkcs1_sha384"
                - "rsa_pss_rsae_sha512"
                - "rsa_pkcs1_sha512"
                - "rsa_pkcs1_sha1"
              validation_context:
                trust_chain_verification: ACCEPT_UNTRUSTED
